@@ -1,3 +1,7 @@
+1998-06-17  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* objectbase.h: Document Swarm.
+
 1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* objectbase.h: Update documentation tags.
